--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-calendar": "^5.0.0",
+    "react-calendar-heatmap": "^1.9.0",
+    "react-dom": "^18.2.0",
+    "react-github-calendar": "^4.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
