--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-calendar": "^5.0.0",
     "react-calendar-heatmap": "^1.9.0",
     "react-dom": "^18.2.0",
-    "react-github-calendar": "^4.1.3"
+    "react-github-calendar": "^4.1.3",
+    "react-tooltip": "^5.26.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
