--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
+    "react": "^18.3.0",
     "react-calendar": "^5.0.0",
     "react-calendar-heatmap": "^1.9.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.0",
     "react-github-calendar": "^4.1.3",
+    "react-router-dom": "^6.23.0",
     "react-tooltip": "^5.26.4"
   },
   "devDependencies": {
